after cr 2